//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "punto 11 - industria textil" {
  database_type: 'PostgreSQL'
  Note: ''
}

Table Zona {
  id Int [pk]
  nombre String [not null]
  descripcion String [not null]
  CajaZona CajaZona [not null]
  MovimientoTicket MovimientoTicket [not null]
}

Table CajaZona {
  id Int [pk]
  descripcion String [not null]
  zonaId Int [not null]
  zona Zona [not null]
  MovimientosCaja MovimientosCaja [not null]
}

Table MovimientosCaja {
  id Int [pk]
  descripcion String [not null]
  cajaId Int [not null]
  movimientoId Int [not null]
  fecha DateTime [not null]
  estado Boolean [not null]
  realizadoPor Trabajador [not null]
  caja CajaZona [not null]
  movimiento MovimientoTicket [not null]
  trabajadorTerceroId Int [not null]
}

Table Tercero {
  id Int [pk]
  nombre String [not null]
  descripcion String [not null]
  Trabajador Trabajador [not null]
  Cliente Cliente [not null]
}

Table Trabajador {
  terceroId Int [pk]
  tercero Tercero [not null]
  MovimientoTicket MovimientoTicket [not null]
  MovimientosCaja MovimientosCaja [not null]

  indexes {
    (terceroId) [pk]
  }
}

Table Cliente {
  terceroId Int [pk]
  tercero Tercero [not null]
  Ticket Ticket [not null]

  indexes {
    (terceroId) [pk]
  }
}

Table Ticket {
  id String [pk]
  fecha String [not null]
  fechaCaducidad String [not null]
  estado Boolean [not null]
  clienteId Int [not null]
  cliente Cliente [not null]
  MovimientoTicket MovimientoTicket [not null]
}

Table MovimientoTicket {
  id Int [pk]
  estado EstadoTicket [not null]
  ticketId String [not null]
  zonaId Int [not null]
  fecha String [not null]
  trabajadorTerceroId Int [not null]
  ticket Ticket [not null]
  zona Zona [not null]
  agregadoPor Trabajador [not null]
  MovimientosCaja MovimientosCaja [not null]
}

Enum EstadoTicket {
  PENDIENTE
  EN_PROCESO
  FINALIZADO
}

Ref: CajaZona.zonaId > Zona.id

Ref: MovimientosCaja.trabajadorTerceroId > Trabajador.terceroId

Ref: MovimientosCaja.cajaId > CajaZona.id

Ref: MovimientosCaja.movimientoId > MovimientoTicket.id

Ref: Trabajador.terceroId > Tercero.id

Ref: Cliente.terceroId > Tercero.id

Ref: Ticket.clienteId > Cliente.terceroId

Ref: MovimientoTicket.ticketId > Ticket.id

Ref: MovimientoTicket.zonaId > Zona.id

Ref: MovimientoTicket.trabajadorTerceroId > Trabajador.terceroId